# RK

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Adaptee.h  Adapter.h  Target.h
src/: Adaptee.cpp  Adapter.cpp  Target.cpp  main.cpp
tests/: test_adaptee.cpp  test_adapter.cpp  test_target.cpp
